[package]
description  = "Bare-metal ESP32-C6 LED strip firmware with Wi-Fi and Home Assistant MQTT control"
edition      = "2024"
keywords     = ["esp32", "led", "mqtt", "no-std", "ws2812"]
license      = "MIT"
name         = "esp32-led-mqtt"
readme       = "README.md"
repository   = "https://github.com/snabb/esp32-led-mqtt"
rust-version = "1.95"
version      = "0.1.0"

[[bin]]
name = "esp32-led-mqtt"
path = "./src/main.rs"

[dependencies]
smart-leds = "0.4.0"

[target.'cfg(target_arch = "riscv32")'.dependencies]
critical-section = "1.2.0"
embassy-executor = "0.10.0"
embassy-futures  = "0.1.2"
embassy-net      = { version = "0.9.1", features = ["dhcpv4", "dns", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-sync     = "0.8.0"
embassy-time     = "0.5.1"
esp-alloc        = { version = "0.10.0", features = ["esp32c6"] }
esp-backtrace = { version = "0.19.0", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6", "log-04"] }
esp-hal = { version = "1.1.1", features = ["esp32c6", "log-04", "unstable"] }
esp-hal-smartled = { package = "esp-hal-smartled2", version = "0.28.2", features = ["esp32c6"] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
esp-radio   = { version = "0.18.0", features = ["esp32c6", "log-04", "unstable", "wifi"] }
esp-rtos    = { version = "0.3.0", features = ["embassy", "esp-radio", "esp32c6", "log-04"] }
heapless    = "0.9.1"
log         = "0.4.27"
minimq      = { version = "0.12.0", default-features = false }
serde       = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
static_cell = "2.1.1"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
